--- a/wyan.dev/Pages/Index.razor
+++ b/wyan.dev/Pages/Index.razor
@@ -1,5 +1,10 @@
 ﻿@page "/"
+@inject IJSRuntime js
 
-<h1>WHAT</h1>
-THIS IS MY SITE NOW
-<p>https://github.com/redninja106</p>
+<Wyan.Components.FrontCover />
+<Wyan.Components.Sidebar/>
+<Wyan.Components.Content />
+
+@code 
+{
+}
