--- a/wyan.dev/App.razor
+++ b/wyan.dev/App.razor
@@ -6,7 +6,7 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <p role="alert">Not Found. <a href="/">Go back</a> now. Or else.</p>
         </LayoutView>
     </NotFound>
 </Router>
