--- a/wyan.dev/Components/Content.razor
+++ b/wyan.dev/Components/Content.razor
@@ -2,7 +2,7 @@
 
 <div class="content" id="content">
     <div class="content-margins">
-        <div class="text" style="height:25vh"> </div>
+        <div class="text" style="height:25vh"></div>
 
         <h1 class="heading">About Me</h1>
         <div class="text" style="height:50vh">it's all empty here...</div>
@@ -21,14 +21,20 @@
         <hr class="separator" />
 
         <h1 class="heading">Games</h1>
+        <a class="subtext" href="/games">see all</a>
+        <div style="height:1rem"></div>
+
         <div class="text" style="height:50vh">it's all empty here...</div>
         
         <hr class="separator"/>
 
         <h1 class="heading">Posts</h1>
+        <a class="subtext" href="/posts">see all</a>
+        <div style="height:1rem"></div>
+
         <ClickablePanelViewList Panels="@(Panels)"/>
 
-        <div class="text" style="height:25vh"> </div>
+        <div class="text" style="height:25vh"></div>
 
         <Footer/>
     </div>
